--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">MobileLab1</string>
+    <string name="find_beer">Find Beer</string>
+    <string name="brands">No beer selected</string>
+    <string-array name="beer_colors">
+        <item>Светлое</item>
+        <item>Эль</item>
+        <item>Сидр</item>
+        <item>Темное</item>
+        <item>Бочонок</item>
+    </string-array>
 </resources>
